@@ -4,10 +4,10 @@ DESCRIPTION=Command-line tools for building SSL client-server applications
 EAPI=5
 HOMEPAGE=http://www.fehcom.de/ipnet/ucspi-ssl.html
 IUSE=perl
-KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-fbsd
+KEYWORDS=~alpha ~amd64 ~arm hppa ~ia64 ~m68k ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-fbsd
 LICENSE=public-domain
 RDEPEND=>=dev-libs/openssl-0.9.6g:= perl? ( dev-lang/perl:= ) sys-apps/ucspi-tcp
 SLOT=0
 SRC_URI=http://www.fehcom.de/ipnet/ucspi-ssl/ucspi-ssl-0.94.tgz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	fixheadtails	c6fd1fc49c9dc11924f28a1406f251a0	flag-o-matic	c263990f1b677b0f0be0a3299f179762	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	qmail	9aa474d2def73a95c642872fdca9c014	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	user	f54e098dd38ba1c0847a13e685b87747
-_md5_=4112b12ad51971468d0d46944f602ac7
+_md5_=2a0a86887276dea29126ef042aea1764
