@@ -5,14 +5,14 @@ DIST ucspi-ssl-0.70-ucspitls-0.1.patch 11967 SHA256 90ac703776f7b34949621a24d24e
 DIST ucspi-ssl-0.70.tar.gz 85111 SHA256 8834aaa83a6862457c853818ce829291285043a553d4466671c05663bc580cf5 SHA512 fe2b7d3af8d40dedf07b644638f2d44f6780ae0a7d0b783ac11046738b862c7fa9fcd719ac11424f9c5ffd5de9bb0814ad2ef993c9cfa649dcc49aeacb2e948d WHIRLPOOL 1dad668519acddeea371585863e54e79f0f6c9889453169c52a56fc8036f48239847f9187db91bb7c5359962781a568f89cc3713305a296df87285110bdf5559
 DIST ucspi-ssl-0.94.tgz 112640 SHA256 343c0281269d88650823eb053fe80bf34b81f52c12b895f27534706b983a23b4 SHA512 a2b7fcea0da4c99a02cd0cf9402d59e55309a65031232e8afc9f29134be268c2e385840f5616c2046649a3f421563f1abcb707a8a8e93c7d29e7aef4a368b604 WHIRLPOOL 1ef3f5b447810eab97532b7fabaf94c56ddd0818a51f1149ec31ad2265c8899e90c3cf5c497a1c3570fc83918576abca2103132db3a494181ea2a872590fadb2
 EBUILD ucspi-ssl-0.70-r1.ebuild 1383 SHA256 5d3c9220600351f671ae025400006341efad20e767b09ba2a7f9cfd288b19558 SHA512 c9b48a4ba97d34e3f6b6e4181f240d58717dd6628ff9a8c749ba95c7a1dd44f98bbee4a4254461e665c951c06447cf3ed3164fdae4bcb81c5d26fea185223288 WHIRLPOOL 8b0ea924edfc7468b11f5e3c3408812c4979914fa770ed8f5a123c624c7ebd6a33224fcf639af2318e204518dbe0bdf14d53c364d003fa04818eaeb2973d3c93
-EBUILD ucspi-ssl-0.94-r1.ebuild 1346 SHA256 571a12205e06cb3e9bfee03637be88db986111ce92e6f162422e351ce45427c5 SHA512 0687177b562103b22890b9a57dca77a7f7870452dbb0fe025749184797c521653580336e0b8d7b1f5a190b9a3ccece96104712307c2085be165d7aeca0e4cb26 WHIRLPOOL e62ef86128a8b01ee51b3a968de6bac18a3204a8a1b9018b86fa303f307d6844dbefea8358bc9ff7bb174e9aecc46c83ddfd8ca73191350a330b52f30956b07e
+EBUILD ucspi-ssl-0.94-r1.ebuild 1345 SHA256 7a2857e7a4af2714e3c0ac9b5a660931874206209ffd79810e37954698c1172d SHA512 4c3c729908d07ec92d22ef61a0ef7b8a2960146493cf9912b1c6adf4730da003161231438a91c691fb057ae40c58f0e7e60e943f4bc8391054da917a72750a02 WHIRLPOOL deac93e4340bee90bb82e0f2e1c5d6189de2607a318d68225f81b7399caf36cff84bed849332aeef474185b6ea80e00da805431e4cda629c3f903480184a3d42
 EBUILD ucspi-ssl-0.94.ebuild 1198 SHA256 f2b602a767ecb79e85eca2be5324e25013dec9c959d7326a1cb80415ca3785ef SHA512 dab203530fe4ecb8f4d104cbd88b67213a906a1e47f1c95f825d0c2b94a378c55780934bb3529bdfe1dfa7b7e6f23f99c784546a30ae073145368ae533cfe0ba WHIRLPOOL 669362014c5c04acc03125a9579de6731d44f1daad306df8daee74b8141cd5f660a0dcf2ce5c8f3d93d15b97a64ccbcb9e82e7b412ebc0ffe6fbf6e6d5e82510
-MISC ChangeLog 5084 SHA256 9a8854e0e68bcda9c76578ea00f8efe2f922901e67a3812fbc46ac6bce7c0b66 SHA512 6ff079365caca4bcf50e732d1aa09821276f208eb96fe6bc9acd95447670999db4b16ae5ddb2c12599bd0983fbf6a9ea178994406284b72f26d7012594f74103 WHIRLPOOL ea46b03e5e57ce71a3c57e59042f7b2386572a9064d32d196043836f4e16c970110a1d749544ee87f758b9853c42ba4990382e0f260b5b3b3e84c4ebeec7610d
+MISC ChangeLog 5191 SHA256 698e67bca5dcc539cc92389b0da572814ce18ae5c97785438e90f6c1db57b9e6 SHA512 de869f00f79787a280730917c01dc2600a2d4fb883169f5078c2354eb3a2427a49ccbbd14941edfd08fd8f3d337479cfa664b39c586c582d5f3c57f10137650c WHIRLPOOL cb6504065fe4dfcc14eb9ee392ecc488c137bc07481f50d9fe814c80e9377dc76a5ceda278f6120f662706cba0a1170da47901f33cea20777dcc2287f52cc1f7
 MISC metadata.xml 680 SHA256 07fbbd7adef595778c3f32fe4b39e6c096bc938ffcffaf8262a74a7eb0f07156 SHA512 89709a7f9d86a274d7825690c26fc347cc716f0fcd816c51d66f69c4a1f5a7dd23dc92794773d78e325825fd023c363f259f112a0cd79027c3e0a3f016017aee WHIRLPOOL cd5d2f626ffd0a1d56093ee54dfdcb840830c1b3d4d3d60fa43cc0b1def4ceab8221cfe0a7eccfdf52a4107caf97a1f58451808cbfc0321852fa173f7da21ad5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlU0jvAACgkQVWmRsqeSphNQugCffeVPyKTqqBsTFxocXyk2qlA0
-Cv0AnRGoVnEQtKTmR54C2Dogj4SfJcx4
-=JvJq
+iEYEAREIAAYFAlU0j0sACgkQVWmRsqeSphOOiACfQlSxHAZu7Wo/dCljlrE3jU5m
+pL4An3xKpjaM6UnrN7SfdI9hsaeqoXOb
+=XfAc
 -----END PGP SIGNATURE-----
